--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "scripts": {
         "dev": "npm run format && next dev",
         "build": "next build",
-        "start": "next start",
+        "start": "next start -p 7500",
         "lint": "next lint",
         "format": "prettier --config .prettierrc --write src/**/*.{js,json,scss,css} && prettier --config .prettierrc --write pages/**/*.{js,json,scss,css} "
     },
