--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
         "react": "17.0.2",
         "react-bootstrap": "^1.6.4",
         "react-dom": "17.0.2",
+        "react-multi-carousel": "^2.6.5",
+        "react-responsive-carousel": "^3.2.21",
         "sass": "^1.42.1"
     },
     "devDependencies": {
