--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
         "@fortawesome/free-brands-svg-icons": "^5.15.4",
         "@fortawesome/free-solid-svg-icons": "^5.15.4",
         "@fortawesome/react-fontawesome": "^0.1.15",
+        "@reduxjs/toolkit": "^1.6.2",
         "axios": "^0.21.1",
         "bootstrap": "^5.1.0",
         "next": "11.1.2",
@@ -24,7 +25,10 @@
         "react-dom": "17.0.2",
         "react-multi-carousel": "^2.6.5",
         "react-rating": "^2.0.5",
+        "react-redux": "^7.2.5",
         "react-responsive-carousel": "^3.2.21",
+        "redux": "^4.1.1",
+        "redux-thunk": "^2.3.0",
         "sass": "^1.42.1"
     },
     "devDependencies": {
