--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
         "react-responsive-carousel": "^3.2.21",
         "redux": "^4.1.1",
         "redux-thunk": "^2.3.0",
-        "sass": "^1.42.1"
+        "sass": "^1.42.1",
+        "uuid": "^8.3.2"
     },
     "devDependencies": {
         "babel-eslint": "^10.1.0",
