--- a/.env.development
+++ b/.env.development
@@ -1,1 +1,1 @@
-NEXT_PUBLIC_BACKEND_BASE_URL=https://freeapi.code4func.com
+NEXT_PUBLIC_BACKEND_BASE_URL=https://locvungshop.southeastasia.cloudapp.azure.com
