gep api trang product

--- a/.env.development
+++ b/.env.development
@@ -1,1 +1,2 @@
 NEXT_PUBLIC_BACKEND_BASE_URL=https://msd.japaneast.cloudapp.azure.com
+NEXT_PUBLIC_IMG_BASE_URL=https://msd.japaneast.cloudapp.azure.com/api/v1/media
