--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
         "bootstrap": "^5.1.0",
         "js-cookie": "^3.0.1",
         "next": "11.1.2",
+        "next-cookies": "^2.0.3",
         "normalize.css": "^8.0.1",
         "nprogress": "^0.2.0",
         "react": "17.0.2",
