--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
         "@reduxjs/toolkit": "^1.6.2",
         "axios": "^0.21.1",
         "bootstrap": "^5.1.0",
+        "html-to-text": "^8.1.0",
         "js-cookie": "^3.0.1",
         "next": "11.1.2",
         "next-cookies": "^2.0.3",
