--- a/.env.production
+++ b/.env.production
@@ -1,2 +1,2 @@
-NEXT_PUBLIC_BACKEND_BASE_URL=https://chunggoixoi.japaneast.cloudapp.azure.com
-NEXT_PUBLIC_IMG_BASE_URL=https://chunggoixoi.japaneast.cloudapp.azure.com/api/v1/media
+NEXT_PUBLIC_BACKEND_BASE_URL=https://locvungshop.japaneast.cloudapp.azure.com
+NEXT_PUBLIC_IMG_BASE_URL=https://locvungshop.japaneast.cloudapp.azure.com/api/v1/media
